--- a/i3/config
+++ b/i3/config
@@ -8,7 +8,6 @@
 # i3 config file (v4)
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
-new_window 1pixel
 set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
@@ -17,8 +16,8 @@ font pango:monospace 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
-
+font pango:DejaVu Sans Mono 8
+font pango:AwesomeFonts 8
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
@@ -209,15 +208,18 @@ gaps outer 0
 #background
 exec /home/luc/.fehbg
 exec picom
+exec megasync
+exec udiskie
 #rofi 
 bindsym $mod+d exec /home/luc/.config/rofi/launchers/type-3/launcher.sh
 bindsym $mod+x exec /home/luc/.config/rofi/powermenu/type-2/powermenu.sh
 bindsym mod4+x exec shutdown now
 #binds
 bindsym $mod+e exec google-chrome-stable
-bindsym $mod+w exec libreoffice -writer
+bindsym $mod+w exec apostrophe
 bindsym $mod+s exec sioyek
+bindsym Print exec flameshot gui
 #Window border
-default_border pixel
+default_border pixel 
 default_floating_border pixel 1
 for_window [all] border pixel 1
